# habit-tracker

./: docker-compose.yml  habit-tracker.code-workspace
backend/: .gitignore  pyproject.toml
backend/config/: settings.py  urls.py
backend/habits/: admin.py  models.py  serializers.py  urls.py  views.py
backend/habits/migrations/: 0001_initial.py  0002_rename_create_at_checkin_created_at_and_more.py
frontend/: .gitignore  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx
frontend/app/(auth)/: _layout.tsx  login.tsx  register.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  profile.tsx  stats.tsx
frontend/services/: api.ts  auth.ts  checkins.ts  habits.ts
frontend/utils/: stats.ts
